# diffusion-policy-drake

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  submit_eval.sh  submit_gcs_data_collection.sh  submit_launch_eval.sh  submit_run_sim_sim_eval.sh
config/: all_action_horizons_launch_eval.txt  all_action_horizons_launch_eval_supercloud.txt  all_action_horizons_launch_eval_supercloud1.txt  all_action_horizons_launch_eval_supercloud2.txt  main_launch_eval.txt
config/baseline/: all_action_horizons_launch_eval_supercloud.txt  all_action_horizons_launch_eval_supercloud1.txt  all_action_horizons_launch_eval_supercloud2.txt
config/baseline_idle_frames_pruned/: all_action_horizons_launch_eval_supercloud.txt
config/best_checkpoint_selection/: all_action_horizons_launch_eval_supercloud.txt
config/dynamic_0_005/: all_action_horizons_launch_eval_supercloud.txt
config/dynamic_0_0075/: all_action_horizons_launch_eval_supercloud.txt
config/dynamic_0_01/: all_action_horizons_launch_eval_supercloud.txt  rerun_canceled_runs.txt
config/dynamic_0_0125/: all_action_horizons_launch_eval_supercloud.txt
config/dynamic_0_015/: all_action_horizons_launch_eval_supercloud.txt
config/dynamic_0_0175/: all_action_horizons_launch_eval_supercloud.txt
config/dynamic_0_02/: all_action_horizons_launch_eval_supercloud.txt
config/dynamic_0_025/: all_action_horizons_launch_eval_supercloud.txt
manipulation_copy/: station.py
planning_through_contact/: utils.py
rl_push_t/: ppo.py  reward_debug.py  submit_rl_training_csail.sbatch
scripts/: launch_eval.py  run_eval_for_one_policy.py  run_sim_sim_eval.py  run_sim_sim_gcs_planner.py  test.py
(+151 files in other folders)
