[tool.poetry]
name = "diffusion-policy-drake"
version = "0.1.0"
description = ""
authors = ["Michael Zeng <michaelszeng@gmail.com>"]
license = "MIT License"
packages = [{include = "planning_through_contact"}]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
matplotlib = "^3.6.1"
numpy = "^1.26.4"
pdbpp = "^0.10.3"
fancycompleter = "0.9.1"  # Pin version to avoid missing LazyVersion attribute error
tqdm = "^4.64.1"
pydot = "^1.4.2"
tk = "^0.1.0"
pytest = "^7.4.0"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"
pygame = "^2.5.1"
opencv-python = "^4.9.0.80"
hydra-core = "1.2.0"
omegaconf = "^2.3.0"
zarr = "2.12.0"

# Diffusion Policy dependencies
diffusion-policy = {path = "/home/michzeng/diffusion-policy", develop = true}
dill = "0.3.5.1"
torch = "^2.2.0"
diffusers = "0.11.1"
robomimic = "0.3.0"
einops = "0.4.1"
numba = "0.59.1"
lxml = "^5.2.1"
manipulation = "2025.1.3"  # Last version of manipulation that still uses numpy 1.x
pyvirtualdisplay = "^3.0"
scipy = "^1.13.0"
wandb = "0.13.3"
huggingface-hub = ">=0.10.0,<0.25.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
pre-commit = "^3.4.0"
black = "^23.12.1"
isort = "^5.12.0"
poetry-pre-commit-plugin = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E","F","I"]  # I enables import sorting
ignore = ["F841", "E731"]  # Ignore unused local variables, allow lambda functions

[tool.ruff.format]
quote-style = "preserve"

[tool.isort]
profile = "black" # Make isort and Black agree on sorting